k8s/environments/rabbitmq/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq-deployment
  labels:
    env: production
    tier: backend
    app: rabbitmq
    name: rabbitmq-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      env: production
      tier: backend
      app: rabbitmq
      name: rabbitmq-pod
  template:
    metadata:
      labels:
        env: production
        tier: backend
        app: rabbitmq
        name: rabbitmq-pod
    spec:
      nodeSelector:
        rabbitmq: rabbitmq
#      affinity: # reference: https://kimjingo.tistory.com/144
#        nodeAffinity:
#          requiredDuringSchedulingIgnoredDuringExecution:
#            nodeSelectorTerms:
#              - matchExpressions:
#                  - key: rabbitmq
#                    operator: In
#                    values:
#                      - rabbitmq
      containers:
        - name: rabbitmq
          image: rabbitmq:management
          ports:
            - containerPort: 5672
              name: http-5672
            - containerPort: 15672
              name: http-15672
          startupProbe:
            httpGet:
              path: /
              port: 15672
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            failureThreshold: 36
          readinessProbe:
            httpGet:
              path: /
              port: 15672
            initialDelaySeconds: 10
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
